--- a/aalto.bib
+++ b/aalto.bib
@@ -4720,6 +4720,24 @@
   isbn = {9524954389}
 }
 
+@incollection{hookAffectiveLoopExperiences2008,
+  title = {Affective {{Loop Experiences}} \textendash{} {{What Are They}}?},
+  booktitle = {Persuasive {{Technology}}},
+  author = {H{\"o}{\"o}k, Kristina},
+  editor = {{Oinas-Kukkonen}, Harri and Hasle, Per and Harjumaa, Marja and Segerst{\aa}hl, Katarina and {\O}hrstr{\o}m, Peter},
+  year = {2008},
+  volume = {5033},
+  pages = {1--12},
+  publisher = {{Springer Berlin Heidelberg}},
+  address = {{Berlin, Heidelberg}},
+  issn = {0302-9743, 1611-3349},
+  doi = {10.1007/978-3-540-68504-3_1},
+  abstract = {A research agenda for bodily persuasion through a design approach we name affective loops is outlined. Affective loop experiences draw upon physical, emotional interactions between user and system.},
+  isbn = {978-3-540-68500-5 978-3-540-68504-3},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/U7DAANUJ/Höök - 2008 - Affective Loop Experiences – What Are They.pdf}
+}
+
 @article{hookRealRacializingEmbodiment2008,
   title = {The `Real' of Racializing Embodiment},
   author = {Hook, Derek},
