--- a/survey/method-tests/sentiment_analysis.Rmd
+++ b/survey/method-tests/sentiment_analysis.Rmd
@@ -49,27 +49,16 @@ What places would you want to visit with your robot avatar and what kind of acti
 ```{r, fig.width=12,fig.asp=0.5}
 
 df <- Telerobot_sorted %>% 
-  select("Q_TELEROBOT_VS_F2F_TRANS") %>%
-  drop_na() 
-
-  df %>%
-  filter(!grepl("(do[es]*n['’]t)|(person)|(robot)|(meeting)", df$Q_TELEROBOT_VS_F2F_TRANS)) %>%
-  unnest_tokens(word, "Q_TELEROBOT_VS_F2F_TRANS") %>%
-  anti_join(stop_words) %>%
-  count(word) %>%
-  with(wordcloud(word, n, max.words = 100, scale = c(5.8,.4), colors=brewer.pal(8, "Dark2")))
-
-df <- Telerobot_sorted %>% 
   dplyr::filter(v == "IL") %>%
   select("Q_TELEROBOT_VS_F2F_TRANS") %>%
   drop_na() 
 
   df %>%
-  filter(!grepl("(do[es]*n['’]t)|(person)|(robot)|(meeting)", df$Q_TELEROBOT_VS_F2F_TRANS)) %>%
   unnest_tokens(word, "Q_TELEROBOT_VS_F2F_TRANS") %>%
   anti_join(stop_words) %>%
   count(word) %>%
-  with(wordcloud(word, n, max.words = 100, scale = c(6.8,.4), colors=brewer.pal(8, "Dark2")))
+  filter(!grepl("(do[es]*n['’]t)|(person)|(robot)|(meeting)", .$word)) %>%
+  with(wordcloud(word, n, max.words = 100, scale = c(5,1), colors=brewer.pal(8, "Dark2")))
   #arrange(desc(n))
 
 
@@ -80,24 +69,59 @@ df <- Telerobot_sorted %>%
 
 
   df %>%
-  filter(!grepl("(do[es]*n['’]t)|(person)|(robot)|(meeting)", df$Q_TELEROBOT_VS_F2F_TRANS)) %>%
   unnest_tokens(word, "Q_TELEROBOT_VS_F2F_TRANS") %>%
   anti_join(stop_words) %>%
   count(word) %>%
-  with(wordcloud(word, n, max.words = 100, scale = c(4,.5), colors=brewer.pal(8, "Dark2")))
- #arrange(desc(n))
+  filter(!grepl("(do[es]*n['’]t)|(person)|(robot)|(meeting)", .$word)) %>%
+  with(wordcloud(word, n, max.words = 100, scale = c(3.5,.5), colors=brewer.pal(8, "Dark2")))
+  #arrange(desc(n))
 
 ```
-## Word cloud 2
-```{r}
-Telerobot_sorted %>% 
+## Word cloud 2read
+```{r, fig.width=12,fig.asp=0.5}
+
+Telerobot_sorted %>% select(v,Q_TELEROBOT_IMAGINE_TRANS) %>% drop_na() %>% filter(Q_TELEROBOT_IMAGINE_TRANS != "") %>% count(v)
+
+df <- Telerobot_ages %>% 
+  dplyr::filter(v == "IL") %>%
   select("Q_TELEROBOT_IMAGINE_TRANS") %>%
-  filter(!grepl("don['’]t", Telerobot_sorted$Q_TELEROBOT_IMAGINE_TRANS)) %>%
+  drop_na() 
+
+
+  df %>%
   unnest_tokens(word, "Q_TELEROBOT_IMAGINE_TRANS") %>%
   anti_join(stop_words) %>%
   count(word) %>%
-  with(wordcloud(word, n, max.words = 100, scale = c(15,.7), colors=brewer.pal(8, "Dark2")))
+  filter(!grepl("(.*n['’]t)|(robot)", .$word)) %>%
+  #with(wordcloud(word, n, max.words = 50, scale = c(3.5,.5), colors=brewer.pal(8, "Dark2")))
+  mutate(freq = sprintf("%0.2f%%",n / sum(n) * 100)) %>% arrange(desc(n))
+
+
+  df %>%
+  unnest_tokens(word, "Q_TELEROBOT_IMAGINE_TRANS") %>%
+  anti_join(stop_words) %>%
+  count(word) %>%
+  filter(!grepl("(.*n['’]t)|(robot)", .$word)) %>%
+  #with(wordcloud(word, n, max.words = 50, scale = c(5,1), colors=brewer.pal(8, "Dark2")))
+  mutate(freq = sprintf("%0.2f%%",n / sum(n) * 100)) %>% arrange(desc(n))
+
+
+
+df <- Telerobot_ages %>% 
+  dplyr::filter(v == "PS") %>%
+  select("Q_TELEROBOT_IMAGINE_TRANS") %>%
+  drop_na()
+
+
+  df %>%
+  unnest_tokens(word, "Q_TELEROBOT_IMAGINE_TRANS") %>%
+  anti_join(stop_words) %>%
+  count(word) %>%
+  filter(!grepl("(.*n['’]t)|(robot)", .$word)) %>%
+  #with(wordcloud(word, n, max.words = 50, scale = c(3.5,.5), colors=brewer.pal(8, "Dark2")))
+  mutate(freq = sprintf("%0.2f%%",n / sum(n) * 100)) %>% arrange(desc(n))
 ```
+
 
 ## Word cloud 3
 ```{r}
