--- a/survey/research_questions.Rmd
+++ b/survey/research_questions.Rmd
@@ -519,7 +519,7 @@ df <-
   mutate(Appearance=as_factor(Q_TELEROBOT_APP)) %>%
   group_by(v,Appearance) %>%
   summarise(n = n()) %>%
-  mutate(freq = n / sum(n), total_n = sum(n))
+  mutate(freq = round(n / sum(n), digits = 2) * 100, total_n = sum(n))
 
  ggbarplot(
    df, 
@@ -541,6 +541,12 @@ df <-
         axis.ticks.y=element_blank(),
       )
 
+  Telerobot_ages %>% select("Q_TELEROBOT_APP", 'v') %>%    
+  drop_na() %>%
+  mutate(Human = ifelse(as_factor(Q_TELEROBOT_APP) == "A human.", 1, 0), Nonhuman = ifelse(as_factor(Q_TELEROBOT_APP) == "A human.", 0, 1))  %>%
+  group_by(v) %>%
+  summarise(across(c('Human', 'Nonhuman'), list(sum = sum, freq = ~sum(.x) / n())))
+
 ```
 ### In outgroup scenario
 ```{r, fig.width=10,fig.height=5}
@@ -552,6 +558,9 @@ df <-
   summarise(n = n()) %>%
   mutate(freq = round(n / sum(n), digits = 2) * 100, total_n = sum(n),
   lab.ypos=cumsum(freq) - 0.5*freq)
+
+
+df
 
  ggbarplot(
    df, 
@@ -572,6 +581,13 @@ df <-
         axis.text.y=element_blank(),
         axis.ticks.y=element_blank(),
       )
+ 
+   Telerobot_ages %>% select("Q_TELEROBOT_APP_G", 'v') %>%    
+  drop_na() %>%
+  mutate(Human = ifelse(as_factor(Q_TELEROBOT_APP_G) == "A human.", 1, 0), Nonhuman = ifelse(as_factor(Q_TELEROBOT_APP_G) == "A human.", 0, 1))  %>%
+  group_by(v) %>%
+  summarise(across(c('Human', 'Nonhuman'), list(sum = sum, freq = ~sum(.x) / n())))
+
 ```
 
 ### Q: Do Palestinians want significantly more a machine appearance than Israelis?
@@ -588,7 +604,7 @@ mutate(APP_MACHINE = ifelse(as_factor(Q_TELEROBOT_APP_G) == 'A machine.', "Machi
 group_by(v, APP_MACHINE) %>%
 summarize(n = n()) %>%
 spread(APP_MACHINE,n) %>%
-ungroup %>%
+ungroup %>%Lin 
 dplyr::select(-v) %>%
 chisq.test()
 ```
@@ -629,6 +645,46 @@ df <-
      labeller = as_labeller(~map(.x,~paste0(.x, " (n = ",(df %>% filter(v == .x))$total_n[1] ,")")))
  )
 ```
+### Which were changed?
+```{r, fig.width=15}
+
+appr <- attributes(Telerobot_ages$Q_TELEROBOT_APP)$labels;
+
+df <-  Telerobot_ages %>% 
+       select(ResponseId, v,Q_TELEROBOT_APP,Q_TELEROBOT_APP_G) %>%
+       drop_na() 
+
+for (name in names(appr)) {
+ for (alt_name in names(appr)) {
+    df[[paste0(name, " -> ",alt_name)]] = with(df, ifelse(Q_TELEROBOT_APP == appr[name] & Q_TELEROBOT_APP_G == appr[alt_name], 1, 0))
+ }
+}
+
+melt_df <-
+  melt(
+      df %>%
+      select(-Q_TELEROBOT_APP,-Q_TELEROBOT_APP_G) %>%
+      drop_na(),
+      id=c('ResponseId','v'),variable.name = "Appearance"
+   ) %>%
+  
+   group_by(v,Appearance) %>%
+   summarise(total_n = n(), sum=sum(value))
+
+ melt_df %>% arrange(desc(sum))
+
+ ggplot(melt_df, aes(x=reorder(Appearance, sum),y=sum,fill=Appearance)) +
+ ylab("Occurences") +
+ xlab("Robot appearance") +
+ geom_bar(position="dodge", stat="identity") +
+ coord_flip() +
+ facet_wrap(~ v,
+     labeller = as_labeller(~map(.x,~paste0(.x, " (n = ",(melt_df %>% filter(v == .x))$total_n[1] ,")")))
+ )
+```
+
+
+
 ### Q: How did participants prefer the robot identity? 
 From those that selected anything.
 ```{r, fig.width=10,fig.asp=0.5}
