--- a/survey/research_questions.Rmd
+++ b/survey/research_questions.Rmd
@@ -855,7 +855,7 @@ df <- melt(
 ) %>%
   group_by(v,IDENT) %>%
   summarise(across(c("value"), list(freq = ~sum(.x)/n() * 100, n = ~ n()))) %>%
-  mutate(type = if_else(grepl("Q_TELEROBOT_IDENT_G", IDENT),"Outgroup","Normal")) %>%
+  mutate(type = if_else(grepl("Q_TELEROBOT_IDENT_G", IDENT),"Outgroup","Casual")) %>%
   mutate(across(IDENT, ~ unlist(map(.x,~ COLUMN_DICTIONARY[toString(.x)]))))
 
 df
@@ -1053,6 +1053,8 @@ df <- melt(
   mutate(type = if_else(grepl("Q_TELEROBOT_FEAT_G", FEAT),"Outgroup","Normal")) %>%
   mutate(across(FEAT, ~ unlist(map(.x,~ COLUMN_DICTIONARY[toString(.x)]))))
 
+df %>% arrange(v,FEAT)
+
  ggplot(df, aes(x=reorder(FEAT, -value_mean),y=value_mean,fill=type)) +
  ylab("Mean") +
  xlab("Robot feature") +
@@ -1146,6 +1148,61 @@ cox_res
 
 
 ```
+
+### What if I take for each participant the value in relation to mean value given (in OUTGROUP)?
+```{r, fig.width=10,fig.asp=0.5}
+
+base_df <- Telerobot_ages %>% select(matches("^Q_TELEROBOT_FEAT_G_\\d$"), 'ResponseId','v') %>%    
+  drop_na() 
+
+feat_cols <- Telerobot_ages %>% select(matches("^Q_TELEROBOT_FEAT_G_\\d$")) %>% colnames
+
+mean_df <- base_df %>%
+rowwise() %>% mutate(m = mean(c_across(Q_TELEROBOT_FEAT_G_1:Q_TELEROBOT_FEAT_G_9)))
+
+for (feat_col in feat_cols) {
+  mean_df[paste0(feat_col,"_M")] = mean_df[feat_col] - mean_df["m"]
+}
+
+base_df_m <- mean_df %>% select(matches("^Q_TELEROBOT_FEAT_G_\\d_M$"), 'ResponseId','v')
+
+df <- melt(
+  base_df_m %>%
+  plyr::rename(COLUMN_DICTIONARY,warn_missing = FALSE)
+ , id=c('ResponseId','v'),variable.name = "FEAT"
+) %>%
+  group_by(v,FEAT) %>%
+  summarise(across(c("value"), list(mean = ~mean(.x), n = ~ n())))
+
+df %>% arrange(FEAT)
+
+  ggplot(df, aes(x=reorder(FEAT, -value_mean),y=value_mean,fill=FEAT)) + 
+  ylab("Mean rank relative to each participant's mean score") +
+  xlab("Robot feature") +
+  geom_bar(stat="identity") +
+  coord_flip() + 
+  facet_wrap(~ v, 
+    labeller = as_labeller(~map(.x,~paste0(.x, " (n = ",(df %>% filter(v == .x))$value_n[1] ,")")))
+  )
+  
+  anova_res <- NULL
+  
+  for (feat_col in feat_cols) {
+
+  res <- anova_test(base_df_m, as.formula(paste0(feat_col,"_M ~ v")), detailed = TRUE, effect.size = "pes")
+  res["FEAT"] = COLUMN_DICTIONARY[feat_col]
+  res_tibble <- as_tibble(res)
+
+  if (is.null(anova_res)) {
+    anova_res <- res_tibble
+  } else {
+    anova_res <-bind_rows(anova_res,res_tibble)
+  }
+}
+
+anova_res
+```
+
 ### Visibility preferences
 ```{r, fig.width=10,fig.asp=0.5}
 df <-
@@ -1209,13 +1266,17 @@ df <-
         axis.ticks.y=element_blank(),
       )
 ```  
-### Comparion betwen same population
+### Comparion betwen same population, was there in increase in will for anonimity
 ```{r, fig.width=10}
-df <- melt(
-  Telerobot_ages %>% select(matches("Q_TELEROBOT_DISP"), 'ResponseId','v') %>%    
-  mutate(Q_TELEROBOT_DISP_G=as_factor(Q_TELEROBOT_DISP_G)) %>%
-  mutate(Q_TELEROBOT_DISP=as_factor(Q_TELEROBOT_DISP)) %>%
+
+base_df <-  Telerobot_ages %>% select(matches("Q_TELEROBOT_DISP"), 'ResponseId','v') %>%    
   drop_na()
+
+df <- melt(
+  base_df %>%
+  mutate(Q_TELEROBOT_DISP_G=as_factor(Q_TELEROBOT_DISP_G)) %>%
+  mutate(Q_TELEROBOT_DISP=as_factor(Q_TELEROBOT_DISP)) 
+
  , id=c('ResponseId','v'),variable.name = "Visibility"
 ) %>%
   group_by(v,Visibility,value) %>%
@@ -1223,7 +1284,7 @@ df <- melt(
   mutate(freq = n / sum(n), total_n = sum(n)) %>%
   mutate(type = if_else(grepl("Q_TELEROBOT_DISP_G", Visibility),"Outgroup","Normal"))
 
-df
+df %>% arrange(v, value)
 
  ggplot(df, aes(x=reorder(value, -freq),y=freq,fill=type)) +
  ylab("Frequency") +
@@ -1233,6 +1294,30 @@ df
  facet_wrap(~ v,
      labeller = as_labeller(~map(.x,~paste0(.x, " (n = ",(df %>% filter(v == .x))$total_n[1] ,")")))
  )
+ 
+cox_df <- base_df %>%
+mutate(DISP_1 = if_else(Q_TELEROBOT_DISP == 1, 1, 0),
+       DISP_2 = if_else(Q_TELEROBOT_DISP == 2, 1, 0),
+       DISP_3 = if_else(Q_TELEROBOT_DISP == 3, 1, 0),
+       DISP_G_1 = if_else(Q_TELEROBOT_DISP_G == 1, 1, 0),
+       DISP_G_2 = if_else(Q_TELEROBOT_DISP_G == 2, 1, 0),
+       DISP_G_3 = if_else(Q_TELEROBOT_DISP_G == 3, 1, 0)
+)
+
+df <- cox_df %>% filter(v == "PS")
+df
+wilcox.test(df$DISP_1, df$DISP_G_1, paired=TRUE) 
+wilcox.test(df$DISP_2, df$DISP_G_2, paired=TRUE) 
+wilcox.test(df$DISP_3, df$DISP_G_3, paired=TRUE) 
+
+melt(
+  df %>% select("ResponseId", "DISP_3", "DISP_G_3") 
+, id=c('ResponseId'),variable.name = "Visibility"
+) %>% group_by(Visibility) %>% summarise(yes = sum(value),no=n() - sum(value)) %>% select (-Visibility) %>% chisq.test()
+  #summarise(value, list(yes = sum,no = ~n()-sum(.x)))
+
+
+ 
 ```
 
 ## General attitude toward outgroup
