hopes and concerns

--- a/survey/method-tests/sentiment_analysis.Rmd
+++ b/survey/method-tests/sentiment_analysis.Rmd
@@ -233,5 +233,40 @@ words_res %>% arrange(v,desc(freq))
   
   
 ```
+### Wordcloud2: hopes and concerns
+```{r}
+  df <- Telerobot_ages %>% 
+ # dplyr::filter(v == "IL") %>%
+  select("Q_GROUP_HOPES_TRANS") %>%
+  drop_na()
+
+
+  word_df <- df %>%
+  unnest_tokens(word, "Q_GROUP_HOPES_TRANS") %>%
+  anti_join(stop_words) %>%
+  count(word,sort=TRUE,name = "freq") %>%
+  filter(!grepl("(.*n['’]t)|(robot)|(ability)|(people)|(meeting)|(palestinian)", .$word))
+  
+  word_df
+  word_df %>% wordcloud2(size = 0.6 )
+  
+  df <- Telerobot_ages %>% 
+ # dplyr::filter(v == "IL") %>%
+  select("Q_GROUP_CONCERNS_TRANS") %>%
+  drop_na()
+
+
+  word_df <- df %>%
+  unnest_tokens(word, "Q_GROUP_CONCERNS_TRANS") %>%
+  anti_join(stop_words) %>%
+  count(word,sort=TRUE,name = "freq") %>%
+  filter(!grepl("(.*n['’]t)|(robot)|(ability)|(people)|(meeting)|(fears)|(concerns)|(palestinian)", .$word))
+  
+  word_df
+  word_df %>% wordcloud2(size = 0.5 )
+  
+
+  
+```
 
 
