--- a/survey/research_questions.Rmd
+++ b/survey/research_questions.Rmd
@@ -1523,29 +1523,33 @@ wilcox.test(df$ROBOT_INTEREST, df$NON_ROBOT_INTEREST, paired=TRUE)
 
 ### Q: Interest of puppet show in general - what effects - Correlation Matrix?
 ```{r}
-corr_vars <- c(
-    "Q_ROBOT_NARS",
-    "Q_AGE",
-    "Q_TECH_CONFIDENCE",
-    "Q_PUPPET_INTEREST"
-  )
+  df <- Telerobot_ages %>% 
+#  filter(Q_DEMOGRAPHICS_2 <= 2) %>%
+  mutate(Q_GENDER = as_factor(Q_DEMOGRAPHICS_2)) %>%
+  select('Q_PUPPET_INTEREST', 'ResponseId','v', "Q_AGE", "Q_DEMOGRAPHICS_2","Q_ROBOT_NARS","Q_TELEROBOT_WOULD_U_3") %>% 
+  drop_na() 
 
-names <- c(
-    "NARS",
-    "Age",
-    "Tech confidence",
-    "Puppet show"
-  )
-Telerobot_ages %>%
-  dplyr::select(
-    "v",
-    corr_vars
-  ) %>%
-  drop_na %>%
-  mutate_all(as.numeric) %>%
-  ggcorrmat(
-    cor.vars = corr_vars, cor.vars.names = names
-)
+  as_tibble(df %>% anova_test(Q_PUPPET_INTEREST ~ v * Q_ROBOT_NARS,detailed = TRUE,effect.size = "pes"))
+  
+  ggscatter(df, x = "Q_ROBOT_NARS", y = "Q_PUPPET_INTEREST",
+          add = "reg.line",                                 # Add regression line
+          conf.int = TRUE,                                  # Add confidence interval
+          facet.by = "v",
+          add.params = list(color = "blue",
+                            fill = "lightgray")
+          )+
+  stat_cor(method = "pearson", label.x = -10, label.y = 20)
+  
+      ggscatter(df, x = "Q_TELEROBOT_WOULD_U_3", y = "Q_PUPPET_INTEREST",
+          add = "reg.line",                                 # Add regression line
+          conf.int = TRUE,                                  # Add confidence interval
+          facet.by = "v",
+          add.params = list(color = "blue",
+                            fill = "lightgray")
+          )+
+  stat_cor(method = "pearson", label.x = -10, label.y = 20)
+  
+
 ```
 
 
@@ -1563,7 +1567,7 @@ df %>% summarise(across(c(starts_with("Q_TELEROBOT_WOULD_U_"),"Q_PUPPET_INTEREST
   summaries = c("n", "median", "mean"),
   digits = 3,
   table.font.size = 3,
-  facet.by = "v",
+  #facet.by = "v",
 )
 
 df <- Telerobot_ages %>% select(starts_with("Q_GROUP_INTEREST"), 'Q_SHOW_INTEREST', 'ResponseId','v') %>% drop_na()
