--- a/survey/research_questions.Rmd
+++ b/survey/research_questions.Rmd
@@ -1334,19 +1334,19 @@ ggdensity(Telerobot_ages %>% select(Q_GROUP_SLIDER_1,v),x = "Q_GROUP_SLIDER_1", 
 ```
 ### Q: How willing are the groups to meat each other with the different scenarios?
 
-```{r, fig.width=10,fig.asp=0.5}
+```{r, fig.width=12,fig.asp=0.5}
   ggsummarystats(
-  melt(Telerobot_ages %>% select(starts_with("Q_GROUP_INTEREST"), 'ResponseId','v') %>% drop_na() %>%     plyr::rename(COLUMN_DICTIONARY), id=c('ResponseId','v'),variable.name = "INTEREST"),
-  x = "INTEREST", y = "value",
-  ggfunc = ggboxplot, palette="npg", add="jitter", color="INTEREST",
+  melt(Telerobot_ages %>% select(starts_with("Q_GROUP_INTEREST"), 'ResponseId','v') %>% drop_na() %>%     plyr::rename(COLUMN_DICTIONARY), id=c('ResponseId','v'),variable.name = "Medium", value.name = "Interest"),
+  x = "Medium", y = "Interest", digits = 3,
+  ggfunc = ggboxplot, palette="npg", add="jitter", color="Medium",
+  legend = "none",
   summaries = c("n", "median", "mean"),
-  digits = 3,
-  table.font.size = 3,
-  facet.by = "v",
+  
+  facet.by = "v"
 )
 
 df <- Telerobot_ages %>%
-filter(Q_DEMOGRAPHICS_2 <= 2) %>%
+#filter(Q_DEMOGRAPHICS_2 <= 2) %>%
 mutate(Q_GENDER = as_factor(Q_DEMOGRAPHICS_2)) %>%
 #filter(Q_GENDER == 'Female') %>%
 #filter(v == 'PS') %>%
@@ -1355,12 +1355,12 @@ drop_na()
 
 c("Q_GROUP_INTEREST_1","Q_GROUP_INTEREST_2","Q_GROUP_INTEREST_3","Q_GROUP_INTEREST_4") %>%
 #map(~ data.frame(append(anova_test(as.formula(paste0(.x," ~ v * Q_GENDER * Q_AGE")), data=df),c(test=.x))))
-map(~ anova_test(as.formula(paste0(.x," ~  Q_AGE")), data=df,effect.size = "pes"),c(test=.x))
+map(~ anova_test(as.formula(paste0(.x," ~  v")), data=df,effect.size = "pes"),c(test=.x))
 
 
 df %>%
 group_by(v) %>%
-summarise(across(starts_with("Q_GROUP_INTEREST"), list(mean=mean)))
+summarise(across(c(starts_with("Q_GROUP_INTEREST")), list(mean=mean,sd=sd)))
 
 
 ggscatter(df, x = "Q_AGE", y = "Q_GROUP_INTEREST_1",
@@ -1490,9 +1490,28 @@ df <- Telerobot_sorted %>%
 filter(v == 'PS') %>%
 select(starts_with("Q_GROUP_INTEREST"),'v') %>%
 drop_na() %>%
-mutate(ROBOT_INTEREST=Q_GROUP_INTEREST_1 + Q_GROUP_INTEREST_2, NON_ROBOT_INTEREST=Q_GROUP_INTEREST_3 + Q_GROUP_INTEREST_4) 
+#mutate(ROBOT_INTEREST=(Q_GROUP_INTEREST_1 + Q_GROUP_INTEREST_2) / 2, NON_ROBOT_INTEREST=(Q_GROUP_INTEREST_3 + Q_GROUP_INTEREST_4) / 2)
+mutate(ROBOT_INTEREST=(Q_GROUP_INTEREST_1), NON_ROBOT_INTEREST=(Q_GROUP_INTEREST_2))
 
 wilcox.test(df$ROBOT_INTEREST, df$NON_ROBOT_INTEREST, paired=TRUE) 
+  
+
+
+# spread(ROBOT_SHOPPING ,n) %>%
+# ungroup %>%
+# dplyr::select(-v) %>%
+# chisq.test()
+
+```
+### Did Israelis significantly prefer not puppet than puppet?
+```{r}
+df <- Telerobot_sorted %>% 
+filter(v == 'IL') %>%
+select(starts_with("Q_GROUP_INTEREST"),'v') %>%
+drop_na() %>%
+mutate(PUPPET_INTEREST=(Q_GROUP_INTEREST_2), NON_PUPPET_INTEREST=(Q_GROUP_INTEREST_1))
+
+wilcox.test(df$PUPPET_INTEREST, df$NON_PUPPET_INTEREST, paired=TRUE) 
   
 
 
@@ -1507,16 +1526,28 @@ wilcox.test(df$ROBOT_INTEREST, df$NON_ROBOT_INTEREST, paired=TRUE)
 
 ## Potential of telepuppets
 
-### Q: Interest of puppet show in general
+### Q: Interest of puppet show in general, difference in chosing larger than 3?
 ```{r, fig.width=10,fig.asp=0.5}
+
+  base_df <-Telerobot_ages %>% select('Q_PUPPET_INTEREST', 'ResponseId','v') %>% drop_na()
+
   ggsummarystats(
-  Telerobot_ages %>% select('Q_PUPPET_INTEREST', 'ResponseId','v') %>% drop_na(),
+  base_df,
   x = "v", y = "Q_PUPPET_INTEREST",
   ggfunc = ggboxplot, palette="npg", add="jitter", color="v",
   summaries = c("n", "median", "mean"),
   digits = 3,
   table.font.size = 3
 )
+
+ base_df %>% 
+  mutate(PUPPET_INTERESTED = ifelse(Q_PUPPET_INTEREST > 3, "Yes", "No")) %>%
+  group_by(v, PUPPET_INTERESTED) %>%
+  summarize(n = n()) %>%
+  spread(PUPPET_INTERESTED,n) %>%
+  ungroup %>%
+  dplyr::select(-v) %>%
+  chisq.test()
 ```
 ### Q: Interest of puppet show in general - what effects - ANOVA?
 
@@ -1570,9 +1601,14 @@ df %>% summarise(across(c(starts_with("Q_TELEROBOT_WOULD_U_"),"Q_PUPPET_INTEREST
   #facet.by = "v",
 )
 
-df <- Telerobot_ages %>% select(starts_with("Q_GROUP_INTEREST"), 'Q_SHOW_INTEREST', 'ResponseId','v') %>% drop_na()
+df <- Telerobot_ages %>% select(starts_with("Q_GROUP_INTEREST"), 'Q_SHOW_INTEREST', 'Q_AGE', 'Q_DEMOGRAPHICS_2', 'ResponseId','v') %>% drop_na()
 
 df %>% summarise(across(c(starts_with("Q_GROUP_INTEREST"),"Q_SHOW_INTEREST"), list(mean=mean,sd=sd)))
+
+df %>% group_by(v) %>% summarise(across(c(starts_with("Q_GROUP_INTEREST"),"Q_SHOW_INTEREST"), list(mean=mean,sd=sd)))
+
+as_tibble(df %>% anova_test(Q_SHOW_INTEREST ~ v ,detailed = TRUE,effect.size = "pes"))
+
 
   ggsummarystats(
   melt(df %>%     plyr::rename(COLUMN_DICTIONARY), id=c('ResponseId','v'),variable.name = "INTEREST"),
